5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4063/executions/1578_1334.log
== TEST (2019-03-18 18:36:26) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 5 - 3)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16.0 / 2.0)

print("Resto: ", 16 / 2)

print("Potenciacao: ", 2***3)
-- ERROR:
File "XXXX", line 11
    print("Potenciacao: ", 2***3)
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 18:36:56) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 5 - 3)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16.0 / 2.0)

print("Resto: ", 16 / 2)

print("Potenciacao: ", 2^3)
-- OUTPUT:
Adicao:  8
Subtracao:  2
Multiplicacao:  8
Divisao:  8.0
Resto:  8.0
Potenciacao:  1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 18:37:00) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 5 - 3)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16.0 / 2.0)

print("Resto: ", 16 / 2)

print("Potenciacao: ", 2^3)
-- EXECUTION TIME:
0.154323
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  2
Multiplicacao:  8
Divisao:  8.0
Resto:  8.0
Potenciacao:  1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 18:37:06) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 5 - 3)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16.0 / 2.0)

print("Resto: ", 16 / 2)

print("Potenciacao: ", 2^3)
-- OUTPUT:
Adicao:  8
Subtracao:  2
Multiplicacao:  8
Divisao:  8.0
Resto:  8.0
Potenciacao:  1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 18:37:20) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 5 - 3)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16.0 / 2.0)

print("Resto: ", 16 / 2)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  2
Multiplicacao:  8
Divisao:  8.0
Resto:  8.0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 18:37:29) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 5 - 3)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16.0 / 2.0)

print("Resto: ", 16 / 2)

print("Potenciacao: ", 2**3)
-- EXECUTION TIME:
0.160978
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  2
Multiplicacao:  8
Divisao:  8.0
Resto:  8.0
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 18:37:41) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 5 - 3)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16.0 / 2.0)

print("Resto: ", 16 / 2)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  2
Multiplicacao:  8
Divisao:  8.0
Resto:  8.0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 18:50:19) 
-- CODE:
print("Adicao: ", 5+3)

print("Subtracao: ", 5-3)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 16.0/2.0)

print("Resto: ", 16/2)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  2
Multiplicacao:  8
Divisao:  8.0
Resto:  8.0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 18:50:40) 
-- CODE:
print("Adicao: ", 5+3)

print("Subtracao: ", 11-3)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 16.0/2.0)

print("Resto: ", 16/2)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8.0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 18:50:50) 
-- CODE:
print("Adicao: ", 5+3)

print("Subtracao: ", 11-3)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 16.0//2.0)

print("Resto: ", 16/2)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8.0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 18:51:12) 
-- CODE:
print("Adicao: ", 5+3)

print("Subtracao: ", 11-3)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 16.0 // 2.0)

print("Resto: ", 16 / 2)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8.0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 18:51:14) 
-- CODE:
print("Adicao: ", 5+3)

print("Subtracao: ", 11-3)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 16.0 // 2.0)

print("Resto: ", 16 / 2)

print("Potenciacao: ", 2**3)
-- EXECUTION TIME:
0.204358
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8.0
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:02:00) 
-- CODE:
print("Adicao: ", 5+3)

print("Subtracao: ", 11-3)

print("Multiplicacao: ", 4.2)

print("Divisao: ", 16.0 // 2.0)

print("Resto: ", 16 / 2)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  4.2
Divisao:  8.0
Resto:  8.0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:02:29) 
-- CODE:
print("Adicao: ", 5+3)

print("Subtracao: ", 11-3)

print("Multiplicacao: ", 4.2)

print("Divisao: ", 16.0 // 2.0)

print("Resto: ", 16 / 2)

print("Potenciacao: ", 2 ^ 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  4.2
Divisao:  8.0
Resto:  8.0
Potenciacao:  1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:09:36) 
-- CODE:
print("Adicao: ", (5 + 3)

print("Subtracao: ", ( 11 - 3)

print("Multiplicacao: ", (4 * 2)

print("Divisao: ", ( 16.0 // 2.0)

print("Resto: ", ( 16 / 2)

print("Potenciacao: ",( 2 ^ 3)
-- ERROR:
File "XXXX", line 3
    print("Subtracao: ", ( 11 - 3)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:10:40) 
-- CODE:
print("Adicao: ", (5 + 3)

print("Subtracao: ", ( 11- 3)

print("Multiplicacao: ", (4 * 2)

print("Divisao: ", ( 16.0 // 2.0)

print("Resto: ", ( 16 / 2)

print("Potenciacao: ",( 2 ^ 3)
-- ERROR:
File "XXXX", line 3
    print("Subtracao: ", ( 11- 3)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:10:49) 
-- CODE:
print("Adicao: ", (5 + 3)

print("Subtracao: ", (11 - 3)

print("Multiplicacao: ", (4 * 2)

print("Divisao: ", ( 16.0 // 2.0)

print("Resto: ", ( 16 / 2)

print("Potenciacao: ",( 2 ^ 3)
-- ERROR:
File "XXXX", line 3
    print("Subtracao: ", (11 - 3)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:11:07) 
-- CODE:
print("Adicao: ", (5 + 3)

print("Subtracao: ", ( 12 - 4)

print("Multiplicacao: ", (4 * 2)

print("Divisao: ", ( 16.0 // 2.0)

print("Resto: ", ( 16 / 2)

print("Potenciacao: ",( 2 ^ 3)
-- ERROR:
File "XXXX", line 3
    print("Subtracao: ", ( 12 - 4)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:11:18) 
-- CODE:
print("Adicao: ", (5 + 3)

print("Subtracao: ", (12 - 4)

print("Multiplicacao: ", (4 * 2)

print("Divisao: ", ( 16.0 // 2.0)

print("Resto: ", ( 16 / 2)

print("Potenciacao: ",( 2 ^ 3)
-- ERROR:
File "XXXX", line 3
    print("Subtracao: ", (12 - 4)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:12:01) 
-- CODE:
print("Adicao: ", (5 + 3)

print("Subtracao: ", ( 15 - 7)

print("Multiplicacao: ", (4 * 2)

print("Divisao: ", ( 16.0 // 2.0)

print("Resto: ", ( 16 / 2)

print("Potenciacao: ",( 2 ^ 3)
-- ERROR:
File "XXXX", line 3
    print("Subtracao: ", ( 15 - 7)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:12:20) 
-- CODE:
print("Adicao: ", (5 + 3)

print("Subtracao: ", (15 - 7)

print("Multiplicacao: ", (4 * 2)

print("Divisao: ", ( 16.0 // 2.0)

print("Resto: ", ( 16 / 2)

print("Potenciacao: ",( 2 ^ 3)
-- ERROR:
File "XXXX", line 3
    print("Subtracao: ", (15 - 7)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:12:28) 
-- CODE:
print("Adicao: ", (5 + 3)

print("Subtracao: ", 15 - 7

print("Multiplicacao: ", (4 * 2)

print("Divisao: ", ( 16.0 // 2.0)

print("Resto: ", ( 16 / 2)

print("Potenciacao: ",( 2 ^ 3)
-- ERROR:
File "XXXX", line 3
    print("Subtracao: ", 15 - 7
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:13:23) 
-- CODE:
print(5 + 3)

print(15 - 7)

print(4 * 2)

print( 16.0 // 2.0)

print( 16 / 2)

print( 2 ^ 3)
-- OUTPUT:
8
8
8
8.0
8.0
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 19:13:25) 
-- CODE:
print(5 + 3)

print(15 - 7)

print(4 * 2)

print( 16.0 // 2.0)

print( 16 / 2)

print( 2 ^ 3)
-- EXECUTION TIME:
0.173342
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
8
8
8
8.0
8.0
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:13:34) 
-- CODE:
print(5 + 3)

print(15 - 7)

print(4 * 2)

print( 16.0 // 2.0)

print( 16 / 2)

print( 2 ^ 3)
-- OUTPUT:
8
8
8
8.0
8.0
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 19:13:40) 
-- CODE:
print(5 + 3)

print(15 - 7)

print(4 * 2)

print( 16.0 // 2.0)

print( 16 / 2)

print( 2 ^ 3)
-- EXECUTION TIME:
0.216387
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
8
8
8
8.0
8.0
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:16:34) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao ", 9 - 1)

print("Multiplicacao" , 4 * 2)

print("Divisao" 16.0 // 2.0)

print("Resto" 16 % 2)

print("potenciacao" 2 ** 3)
-- ERROR:
File "XXXX", line 7
    print("Divisao" 16.0 // 2.0)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:16:49) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao ", 9 - 1)

print("Multiplicacao" , 4 * 2)

print("Divisao" 8 / 1)

print("Resto" 16 % 2)

print("potenciacao" 2 ** 3)
-- ERROR:
File "XXXX", line 7
    print("Divisao" 8 / 1)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:16:51) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao ", 9 - 1)

print("Multiplicacao" , 4 * 2)

print("Divisao" 8 / 1)

print("Resto" 16 % 2)

print("potenciacao" 2 ** 3)
-- ERROR:
File "XXXX", line 7
    print("Divisao" 8 / 1)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:16:52) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao ", 9 - 1)

print("Multiplicacao" , 4 * 2)

print("Divisao" 8 / 1)

print("Resto" 16 % 2)

print("potenciacao" 2 ** 3)
-- ERROR:
File "XXXX", line 7
    print("Divisao" 8 / 1)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 19:16:53) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao ", 9 - 1)

print("Multiplicacao" , 4 * 2)

print("Divisao" 8 / 1)

print("Resto" 16 % 2)

print("potenciacao" 2 ** 3)
-- EXECUTION TIME:
0.218026
-- ERROR:
  File "/home/codebench/codes/1578/1334/main.py", line 7
    print("Divisao" 8 / 1)
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:17:02) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao ", 9 - 1)

print("Multiplicacao" , 4 * 2)

print("Divisao" 16 / 2)

print("Resto" 16 % 2)

print("potenciacao" 2 ** 3)
-- ERROR:
File "XXXX", line 7
    print("Divisao" 16 / 2)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:17:47) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9 - 1)

print("Multiplicacao: " , 4 * 2)

print("Divisao: ",  16 / 2)

print("Resto: " 16 % 2)

print("potenciacao: " 2 ** 3)
-- ERROR:
File "XXXX", line 9
    print("Resto: " 16 % 2)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:17:56) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9 - 1)

print("Multiplicacao: " , 4 * 2)

print("Divisao: ",  16 / 2)

print("Resto: ", 16 % 2)

print("potenciacao: " 2 ** 3)
-- ERROR:
File "XXXX", line 11
    print("potenciacao: " 2 ** 3)
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:18:05) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9 - 1)

print("Multiplicacao: " , 4 * 2)

print("Divisao: ",  16 / 2)

print("Resto: ", 16 % 2)

print("potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  0
potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 19:18:07) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9 - 1)

print("Multiplicacao: " , 4 * 2)

print("Divisao: ",  16 / 2)

print("Resto: ", 16 % 2)

print("potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.15871
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  0
potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:18:08) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9 - 1)

print("Multiplicacao: " , 4 * 2)

print("Divisao: ",  16 / 2)

print("Resto: ", 16 % 2)

print("potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  0
potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:18:29) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9 - 1)

print("Multiplicacao: " , 4 * 2)

print("Divisao: ",  16 / 2)

print("Resto: ", 16 % 2)

print("potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  0
potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:18:43) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9 - 1)

print("Multiplicacao: " , 4 * 2)

print("Divisao: ",  16 / 2)

print("Resto: ", 20 % 12)

print("potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:19:12) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9 - 1)

print("Multiplicacao: " , 4 * 2)

print("Divisao: ",  16 / 2)

print("Resto: ", 20 % 12)

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 19:19:18) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9 - 1)

print("Multiplicacao: " , 4 * 2)

print("Divisao: ",  16 / 2)

print("Resto: ", 20 % 12)

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.217772
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
